<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".YonFragment"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="327dp"
            android:layout_height="203dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="117dp"
            android:fontFamily="@font/federo"
            android:gravity="center"
            android:text="@string/tvResult"
            android:textSize="136sp" />
            />

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/federo"
            android:gravity="center"
            android:text="@string/btnRandomize"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvShake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="166dp"
            android:layout_marginRight="166dp"
            android:layout_marginBottom="78dp"
            android:text="@string/tvShake" />

    </RelativeLayout>
</FrameLayout>